--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
     "@types/node": "^18.11.4",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
