--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.7",
+    "sweetalert2": "^11.6.16",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
